--- a/SecureMailApp/Views/Shared/_Layout.cshtml
+++ b/SecureMailApp/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Inbox">Inbox</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Message" asp-action="Inbox">Inbox</a>
                         </li>
                     </ul>
                 </div>
