--- a/SecureMailApp/Views/_ViewImports.cshtml
+++ b/SecureMailApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SecureMailApp
 @using SecureMailApp.Models
 @using SecureMailApp.ViewModels
+@using SecureMailApp.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
