add error message for failed decryption

--- a/SecureMailApp/Views/Message/GetMessage.cshtml
+++ b/SecureMailApp/Views/Message/GetMessage.cshtml
@@ -1,4 +1,8 @@
 ﻿@model string
 
 <h3>@ViewBag.Message</h3>
+<br />
+
+<p>@ViewBag.MessageDecryption</p>
+<p>@ViewBag.FileDecryption</p>
 <a asp-action="Inbox">Back to inbox</a>
